; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_SeekableOutputStream_drop.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_SeekableOutputStream_drop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32 }
%struct.TYPE_8__ = type { i32 (%struct.TYPE_8__**, i32)* }

@.str = private unnamed_addr constant [73 x i8] c"cannot attach to JVM in SeekableOutputStream_drop; leaking output stream\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @SeekableOutputStream_drop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SeekableOutputStream_drop(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca %struct.TYPE_8__**, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %9, %struct.TYPE_7__** %5, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call %struct.TYPE_8__** @jni_attach_thread(i32* %10, i32* %7)
  store %struct.TYPE_8__** %11, %struct.TYPE_8__*** %6, align 8
  %12 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %6, align 8
  %13 = icmp eq %struct.TYPE_8__** %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @fz_warn(i32* %15, i8* getelementptr inbounds ([73 x i8], [73 x i8]* @.str, i64 0, i64 0))
  br label %41

17:                                               ; preds = %2
  %18 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %6, align 8
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 0
  %21 = load i32 (%struct.TYPE_8__**, i32)*, i32 (%struct.TYPE_8__**, i32)** %20, align 8
  %22 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %6, align 8
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 %21(%struct.TYPE_8__** %22, i32 %25)
  %27 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %6, align 8
  %28 = load %struct.TYPE_8__*, %struct.TYPE_8__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 0
  %30 = load i32 (%struct.TYPE_8__**, i32)*, i32 (%struct.TYPE_8__**, i32)** %29, align 8
  %31 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %6, align 8
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %33 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = call i32 %30(%struct.TYPE_8__** %31, i32 %34)
  %36 = load i32*, i32** %3, align 8
  %37 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %38 = call i32 @fz_free(i32* %36, %struct.TYPE_7__* %37)
  %39 = load i32, i32* %7, align 4
  %40 = call i32 @jni_detach_thread(i32 %39)
  br label %41

41:                                               ; preds = %17, %14
  ret void
}

declare dso_local %struct.TYPE_8__** @jni_attach_thread(i32*, i32*) #1

declare dso_local i32 @fz_warn(i32*, i8*) #1

declare dso_local i32 @fz_free(i32*, %struct.TYPE_7__*) #1

declare dso_local i32 @jni_detach_thread(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
